fixed some alignment

--- a/css/style.css
+++ b/css/style.css
@@ -93,6 +93,10 @@ section.aboutme {
     grid-row: 2 / 5;
 }
 
+#about {
+    padding-top: 60px;
+}
+
 section.projects {
     grid-column: 2 / 4;
     grid-row: 2 / 5;
@@ -507,6 +511,13 @@ section.contact h1.section-title {
     #code, #code0, #view0, #view1 {
         height: 20px;
 
+    }
+
+    #about {
+        padding-top: 1em;
+    }
+    #projects {
+        padding-top: 2em;
     }
     /*html {*/
     /*    max-width: 100vw;*/
